2009-12-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed usage of --bt-save-metadata option.
	* src/usage_text.h

2009-12-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated po templates.
	* po/aria2.pot

2009-12-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Get rid of AI_ADDRCONFIG when --disable-ipv6 opiton is given. It
	causes name resolution error when none of network interface has
	IPv4 address.
	* src/main.cc

2009-12-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.8.0.
	* configure.ac

2009-12-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use info hash as a filename when saving BitTorrent metadata.
	* src/UTMetadataPostDownloadHandler.cc
	* test/UTMetadataPostDownloadHandlerTest.cc

2009-12-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented system.multicall XML-RPC method in man page.
	* doc/aria2c.1.txt

2009-12-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added signal handler for SIGHUP to save .aria2 file when terminal
	is closed. The handler is the same one for SIGINT and SIGTERM.
	* src/MultiUrlRequestInfo.cc

2009-12-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Defined method name in XmlRpcMethod subclasses.
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h
	* test/XmlRpcMethodTest.cc

2009-12-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added system.multicall XML-RPC method.
	* src/XmlRpcMethod.cc
	* src/XmlRpcMethod.h
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h
	* test/XmlRpcMethodTest.cc

2009-12-25  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Check structure depth when decoding.
	* src/bencode.cc
	* src/bencode.h
	* test/BencodeTest.cc

2009-12-25  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented tellStopped XML-RPC method in man page.
	* doc/aria2c.1.txt
