@@ -2,12 +2,12 @@
 .\"     Title: aria2c
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
-.\"      Date: 12/26/2009
+.\"      Date: 12/27/2009
 .\"    Manual: Aria2 Manual
 .\"    Source: Aria2
 .\"  Language: English
 .\"
-.TH "ARIA2C" "1" "12/26/2009" "Aria2" "Aria2 Manual"
+.TH "ARIA2C" "1" "12/27/2009" "Aria2" "Aria2 Manual"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -539,6 +539,12 @@ If the whole download speed of every torrent is lower than SPEED, aria2 temporar
 or
 \fIM\fR(1K = 1024, 1M = 1024K)\&. Default:
 \fI50K\fR
+.RE
+.PP
+\fB\-\-bt\-save\-metadata\fR[=\fItrue\fR|\fIfalse\fR]
+.RS 4
+Save metadata as \&.torrent file\&. This option has effect only when BitTorrent Magnet URI is used\&. The filename is hex encoded info hash with suffix \&.torrent\&. The directory to be saved is the same directory where download file is saved\&. If the same file already exists, metadata is not saved\&. Default:
+\fIfalse\fR
 .RE
 .PP
 \fB\-\-bt\-seed\-unverified\fR[=\fItrue\fR|\fIfalse\fR]
