@@ -1,5 +1,10 @@
 2009-12-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
+	Documented --bt-save-metadata option in man page.
+	* doc/aria2c.1.txt
+
+2009-12-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
 	Fixed usage of --bt-save-metadata option.
 	* src/usage_text.h
 
